@startuml
'https://plantuml.com/class-diagram

skin rose



package Programa {

    'Clases

    class Videojuego{

        - codigo : int
        - nombre : String
        - precio : int
        - genero : String
        - clasificacionPorEdades : String
        - desarrolladora : String
        - plataforma : String
        - cantidadVentas : int
        - montoTotal : int

        + Videojuego(codigo:int, nombre:String, precio:int,genero:String
        clasificacionPorEdades:String, desarrolladora:String, plataforma:String)

        + empaquetarVideojuego() : String

        + getCodigo() : int
        + getNombre() :String
        + getPrecio() : int
        + getGenero() : String
        + getClasificacion() : String
        + getDesarrolladora() : String
        + getPlataforma() : String
        + getCantidadVentas() : int
        + getMontoTotal() : int
        + setCantidadVentas() : void
        + setMontoTotal() : void

    }

    class ListaVideojuegos{

        - arregloJuegos : Videojuego[]
        - cantidadMaxima : int
        - cantidadActual : int
        - cantidadNintendo : int
        - cantidadPlaystation : int
        - cantidadXbox : int

        + ListaVideojuegos(cantidadMaxima:int)

        + lecturaArchivo() : void
        + generoEnOferta() : String
        + empaquetarVideojuego(posicion:int) : String
        + buscarCantidadMaximaVendida() : int
        + montoTotal() : int
        + buscar(codigo:int) : int
        + buscar(nombre:String) : int

        + getCantidadMaxima() : int
        + getCantidadActual() : int
        + getArregloJuegos() : Videojuego

        + getCantidadNintendo() : int
        + getCantidadPlaystation() : int
        + getCantidadXbox() : int
        + setCantidadNintendo(cantidadNintendo:int) : void
        + setCantidadPlaystation(cantidadPlaystation:int) : void
        + setCantidadXbox(cantidadXbox:int) : void

    }

    class Empleado{
        - nombreDeUsuario : String
        - contrasena : String
        - comicion : int
        - cantidadVentas : int

        + Empleado(nombreDeUsuario:String, contrasena:String, comicion:int)

        + getNombreUsuario() : String
        + getContrasenia() : String
        + getComicion() : int
        + getCantidadVentas() : int
        + setComision(comision:int) : void
        + setCantidadVentas(cantidadVentas:int) : void

    }

    class ListaEmpleados{

        - arregloEmleados : Empleado[]
        - cantidadMaxima : int
        - cantidadActual : int

        + ListaEmpleados(cantidadMaxima:int)

        + lecturaArchivo() : void
        + buscarEmpleado(nombre:String) : int
        + buscarEmpleadoMasVentas() : int

        + getCantidadMaxima() : int
        + getCantidadActual() : int
        + getArregloEmpleados() : Empleado

    }

    class Cliente{

        - rut : String
        - nombreCompleto : String
        - correoElectronico : String

        + Cliente(rut:String, nombreCompleto:String, correoElectronico:String)

        + getRut() : String
        + getNombreCompleto() : String
        + getCorreoElectronico() : String

    }

    class ListaClientes{

        - arregloClientes : Cliente[]
        - cantidadMaxima : int
        - cantidadActual : int
        - cantidadVentas : int
        - montoTotalVentas : int

        + ListaClientes(cantidadMaxima:int)

        + agregar(nuevoCliente:Cliente) : boolean
        + buscar(rut:String) : int

        + getCantidadMaxima() : int
        + getCantidadActual() : int
        + getArregloClentes() : Cliente
        + getCantidadVentas() : int
        + getMontoTotalVentas() : int
        + setCantidadVentas(cantidadVentas:int) : void
        + setMontoTotalVentas(montoTotalVentas:int) : void

    }


}


'Relaciones

ListaVideojuegos "   1" o--right-- " 10" Videojuego : almacena
ListaEmpleados "1" o--right-- "5" Empleado : almacena
ListaClientes "1" o-right- "*" Cliente : almacena

Empleado "1" --> "*" Cliente : atiende
Cliente "1" --> "*" Videojuego : compra


@enduml
